--- a/index.html
+++ b/index.html
@@ -9,41 +9,54 @@
 </head>
 <body>
     <div class="container">
-        <div class="top"></div>
-            <div class="header"></div>
+        <div class="top">
+            <div class="header">
                 <div class="header-logo">Header Logo</div>
-                <div class="header-links-container"></div>
+                <div class="header-links-container">
                     <div class="header-links">header link one</div>
                     <div class="header-links">header link two</div>
                     <div class="header-links">header link three</div>
-            <div class="sign-up-section-container"></div>
+                </div>
+            </div>
+            <div class="sign-up-section-container">
                 <div class="header-one-title">This website is awesome</div>
                 <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <div class="sign-up-button-top">Sign ip</div>
                 <div class="header-image">this is a placeholder for an image</div>
-        <div class="middle-one"></div>
+            </div>
+        </div>
+        <div class="middle-one">
             <div class="header-two-title">Some random information.</div>
-            <div class="cards-container"></div>
-                <div class="card-images-container"></div>
+            <div class="cards-container">
+                <div class="card-images-container">
                     <div class="card-images">image 1</div>
                     <div class="card-images">image 2</div>
                     <div class="card-images">image 3</div>
                     <div class="card-images">image 4</div>
-                <div class="card-text-container"></div>
+                </div>
+                <div class="card-text-container">
                     <div class="card-text">text 1</div>
                     <div class="card-text">text 2</div>
                     <div class="card-text">text 3</div>
                     <div class="card-text">text 4</div>
-        <div class="middle-two"></div>
-            <div class="quote-container"></div>
+                </div>
+            </div>
+        </div>
+        <div class="middle-two">
+            <div class="quote-container">
                 <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 <div class="quote-author">-Thor, God of Thunder</div>
-        <div class="bottom"></div>
-            <div class="call-to-action-box"></div>
-                <div class="call-to-action-text-container"></div>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="call-to-action-box">
+                <div class="call-to-action-text-container">
                     <div class="call-to-action-header">Call to action! It's time!</div>
                     <div class="call-to-action-text'">Sign up for our product by clicking that button right over there!</div>
+                </div>
                 <div class="sign-up-button-bottom">Sign up</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
