--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="sign-up-section-container">
                 <div class="header-one-title">This website is awesome</div>
                 <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                <div class="sign-up-button-top">Sign ip</div>
+                <div class="sign-up-button-top">Sign up</div>
                 <div class="header-image">this is a placeholder for an image</div>
             </div>
         </div>
