--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
                 </div>
             </div>
             <div class="sign-up-section-container">
-                <div class="header-one-title">This website is awesome</div>
-                <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                <div class="sign-up-button-top">Sign up</div>
+                <div class="header-text-container">
+                    <div class="header-one-title">This website is awesome</div>
+                    <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                    <div class="sign-up-button-top">Sign up</div>
+                </div>
                 <div class="header-image">this is a placeholder for an image</div>
             </div>
         </div>
@@ -52,11 +54,12 @@
             <div class="call-to-action-box">
                 <div class="call-to-action-text-container">
                     <div class="call-to-action-header">Call to action! It's time!</div>
-                    <div class="call-to-action-text'">Sign up for our product by clicking that button right over there!</div>
+                    <div class="call-to-action-text">Sign up for our product by clicking that button right over there!</div>
                 </div>
                 <div class="sign-up-button-bottom">Sign up</div>
             </div>
         </div>
+        <div class="copyright">Copyright</div>
     </div>
 </body>
 </html>
