--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
             <div class="header-two-title">Some random information.</div>
             <div class="cards-container">
                 <div class="card-images-container">
-                    <div class="card-images">image 1</div>
-                    <div class="card-images">image 2</div>
-                    <div class="card-images">image 3</div>
-                    <div class="card-images">image 4</div>
-                </div>
-                <div class="card-text-container">
-                    <div class="card-text">text 1</div>
-                    <div class="card-text">text 2</div>
-                    <div class="card-text">text 3</div>
-                    <div class="card-text">text 4</div>
+                    <div class="card-one">
+                        <div class="card-images"></div>
+                        <div class="card-text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card-two">
+                        <div class="card-images"></div>
+                        <div class="card-text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="card-three">
+                        <div class="card-images"></div>
+                        <div class="card-text">this is some subtext under an illustration or image</div>
+                     </div>
+                     <div class="card-four">
+                        <div class="card-images"></div>
+                        <div class="card-text">this is some subtext under an illustration or image</div>
+                    </div>
                 </div>
             </div>
         </div>
